@@ -7,6 +7,9 @@ Version 1.4.9 - CVS
   - Drop obsolete script plugins/make_archive.pl.
   - Fixed Google translate form in translate plugin. Added new language
     pairs.
+  - Added XMAGICTRASH extension tests in configtest utility. Removed code
+    that handled 'inbox.trash' as special folder in courier (#1354393).
+  - Allowed moving folders to trash in courier.
 
 Version 1.4.8 - 11th August 2006
 --------------------------------
